Thêm chức năng quên mật khẩu, đăng xuất và ghi nhớ đăng nhập

--- a/TravelAssistant/app/src/main/res/layout/activity_fotgot_password.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_fotgot_password.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="15dp"
     tools:context=".FotgotPasswordActivity">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/instructForgotPassword"
         android:layout_width="wrap_content"
@@ -57,27 +59,49 @@
     </RelativeLayout>
 
     <EditText
-        android:id="@+id/enterInforForgotPassword"
+        android:id="@+id/enterInfoForgotPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:textSize="20sp"
-        android:background="@drawable/border_edit_text"
-        android:padding="10dp"
         android:layout_below="@id/selectOptionForForgotPassword"
-        android:layout_marginBottom="25dp"/>
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/border_edit_text"
+        android:inputType="text"
+        android:padding="10dp"
+
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/renamePassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/enterInfoForgotPassword"
+        android:textSize="20sp"
+        android:layout_marginBottom="25dp"
+        android:visibility="gone"
+        android:padding="10dp"
+        android:background="@drawable/border_edit_text"
+        android:hint="Enter new password..."
+        />
+
+
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/submitButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/enterInforForgotPassword"
-        android:text="@string/submit_button"
+
+
+        android:layout_below="@id/renamePassword"
+        android:text="Send code"
         android:textSize="20sp"
         android:textAllCaps="false"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorGray"
         android:background="@drawable/border_button"
         android:layout_centerHorizontal="true"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"/>
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:enabled="false"
+        />
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
