--- a/TravelAssistant/app/src/main/res/layout/activity_chat.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_chat.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
+    android:id="@+id/chatLayaout"
     tools:context=".ChatActivity">
 
     <TextView
