--- a/TravelAssistant/app/src/main/res/layout/tour_layout.xml
+++ b/TravelAssistant/app/src/main/res/layout/tour_layout.xml
@@ -25,10 +25,24 @@
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_width="match_parent"
+            android:layout_width="260dp"
             android:layout_height="25dp"
             android:paddingTop="3dp"
             android:layout_marginLeft="5dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="4dp"
+            android:text="@string/IdTitle"/>
+
+        <TextView
+            android:id="@+id/tvTourId"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_marginLeft="4dp"/>
+
     </LinearLayout>
 
     <LinearLayout
