--- a/TravelAssistant/app/src/main/res/values/styles.xml
+++ b/TravelAssistant/app/src/main/res/values/styles.xml
@@ -21,4 +21,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="CustomRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/rating_bar</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:maxHeight">50dp</item>
+    </style>
+
 </resources>
