Tạo màn hình gợi ý điểm dừng; thêm, xoá điểm dừng gợi ý trong danh sách điểm dừng của tour

--- a/TravelAssistant/app/src/main/res/layout/activity_stop_point_map.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_stop_point_map.xml
@@ -97,4 +97,16 @@
         android:layout_marginRight="14dp"
         android:layout_marginBottom="14dp"/>
 
+    <ImageButton
+        android:id="@+id/imgbAddRecommendedSP"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/add_icon"
+        android:scaleType="fitXY"
+        android:layout_above="@id/imgbMenuStopPoint"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="14dp"
+        android:layout_marginBottom="14dp"/>
+
 </RelativeLayout>
