--- a/TravelAssistant/app/src/main/res/layout/activity_register.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_register.xml
@@ -68,6 +68,7 @@
             android:inputType="text"
             android:textSize="20sp"
             android:background="@drawable/border_edit_text"
+            android:hint="yyyy-mm-dd"
             android:layout_marginBottom="10dp"
             android:layout_below="@id/dobLabel"
             android:layout_marginTop="5dp"
