--- a/TravelAssistant/app/src/main/res/layout/activity_tour_info.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_tour_info.xml
@@ -295,7 +295,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/functionField"
-                android:layout_marginBottom="15dp">
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp">
 
                 <TextView
                     android:id="@+id/tvJoin"
